--- a/week3/Homework/ex2/package.json
+++ b/week3/Homework/ex2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-piano-demo",
-  "homepage": "https://www.kevinqi.com/react-piano",
+  "homepage": "",
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
